Apply Refaster rules
This replaces Paths.get() with Path.of().