@@ -18,7 +18,6 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -40,7 +39,7 @@ public class ParserTest {
 
   @Before
   public void resetBasePath() {
-    basePath = Paths.get("");
+    basePath = Path.of("");
   }
 
   private Map<String, String> test(String content)
